invoices page zoom on mobile fix

--- a/client/src/components/Invoices/Invoice/Invoice.css
+++ b/client/src/components/Invoices/Invoice/Invoice.css
@@ -13,6 +13,10 @@
     display: none;
 }
 
+.invoice:hover, .invoice:active {
+    border: 1px solid #7C5DFA;
+}
+
 .invoice-left-section {
     display: flex;
     align-items: center;
@@ -96,7 +100,7 @@
         border-radius: 8px;
         cursor: pointer;
         padding: 1em;
-        width: 500px;
+        width: inherit;
         margin: 0 auto;
     }
 
